Graal Native Image works!
Huge thanks to Berstanio for the Graal support library!

I've split up build_native.bat into a user-specific setup_build.bat and a native-image command in build_native.bat . Typically you run setup_build.bat once in a console, and then build_native.bat possibly many times after it. Running setup_build.bat more than once can make the PATH too long temporarily.