@@ -1,7 +1,9 @@
-"C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64 && ^
 C:\d\jvm\graal11\bin\native-image.cmd ^
 -H:+ReportExceptionStackTraces ^
 --report-unsupported-elements-at-runtime ^
 --no-fallback ^
--H:IncludeResources=".*.*" ^
--jar DetritusScion.jar
+--add-modules jdk.unsupported ^
+-H:IncludeResources="((images|music|sfx|shaders)/.*)|(Iosevka.*)|(.*\.dll)" ^
+-H:+ForceNoROSectionRelocations ^
+-H:-SpawnIsolates ^
+-jar ../lwjgl3/build/lib/DetritusScion.jar
